unpackaged/main/default/objects/ssot__KnowledgeArticleVersion__dlm/fields/Content_c__c.field-meta.xml
<CustomField>
    <fullName>Content_c__c</fullName>
    <label>Content</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Content</labelOverride>
        <masterLabel>Content</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>