unpackaged/main/default/objects/ssot__KnowledgeArticleVersion__dlm/fields/DigitalEngagementResponse_c__c.field-meta.xml
<CustomField>
    <fullName>DigitalEngagementResponse_c__c</fullName>
    <label>Digital Engagement Response</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Digital Engagement Response</labelOverride>
        <masterLabel>Digital Engagement Response</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>