unpackaged/main/default/objects/ssot__KnowledgeArticleVersion__dlm/fields/InternalNotes_c__c.field-meta.xml
<CustomField>
    <fullName>InternalNotes_c__c</fullName>
    <label>Internal Notes</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Internal Notes</labelOverride>
        <masterLabel>Internal Notes</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>